Prevent logo from flickering during transition

--- a/source/styles/blocks/_header.scss
+++ b/source/styles/blocks/_header.scss
@@ -25,6 +25,8 @@
     transform: translateY(-50%);
 
     a {
+      backface-visibility: hidden;
+
       img {
         width: $rythm--tick * 2;
       }
